...
                              workoutViewModel.updateCounter(
                                  requestId = acceptedRequest?.requestId ?: "", counter = count)
                            }
                          },
                          colors =
                              ButtonDefaults.buttonColors(containerColor = INTERACTION_COLOR_DARK),
                          modifier = Modifier.testTag("DecrementButton")) {
                            Text(
                                stringResource(id = R.string.decrement_button_text),
                                color = PRINCIPLE_BACKGROUND_COLOR)
                          }

                      Button(
...
                            count++
                            workoutViewModel.updateCounter(
                                requestId = acceptedRequest?.requestId ?: "", counter = count)
                          },
                          colors =
                              ButtonDefaults.buttonColors(containerColor = INTERACTION_COLOR_DARK),
                          modifier = Modifier.testTag("IncrementButton")) {
                            Text(
                                stringResource(id = R.string.increment_button_text),
                                color = PRINCIPLE_BACKGROUND_COLOR)
                          }

                      Button(
...
                            workoutViewModel.updatePairingRequestStatus(
                                requestId = acceptedRequest?.requestId ?: "",
                                status = RequestStatus.OLD)
                          },
                          colors =
                              ButtonDefaults.buttonColors(containerColor = INTERACTION_COLOR_DARK),
                          modifier = Modifier.testTag("EndSessionButton")) {
                            Text(
                                stringResource(id = R.string.end_session_button_text),
                                color = PRINCIPLE_BACKGROUND_COLOR)
                          }
                    }
              }
...
